chore: updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,2 @@
 /logs
-/notes.txt
-/workspace_20251021_113317
-/workspace_20251021_115053
-/workspace_20251021_144048
-/workspace_20251021_151914
-/workspace_20251021_153345
-/workspace_20251022_020613
-/workspace_20251022_022040
+/workspace_*
